# modpadctrl

./: Cargo.toml  LICENSE  sliders.toml
modpad_service/: Cargo.toml
modpad_service/src/: lib.rs  main.rs  windows_volume_control.rs
src/: command.rs  error.rs  keyboard_keypad_page.rs  lib.rs  main.rs
